# pan-cancer-transcriptomic-classifier

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eda.ipynb
src/tcga_classifier/: app.py  data_loader.py  evaluator.py  explainer.py  preprocessor.py  trainer.py
templates/: error.html  home.html  results.html
tests/: test_data_loader.py  test_evaluator.py  test_pipeline.py  test_preprocessor.py
